--- a/SQL.ipynb
+++ b/SQL.ipynb
@@ -5776,6 +5776,26 @@
    "source": [
     "select()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'final'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"final\""
+   ]
   }
  ],
  "metadata": {
