--- a/SQL.ipynb
+++ b/SQL.ipynb
@@ -5796,6 +5796,26 @@
    "source": [
     "\"final\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Final2'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Final2\""
+   ]
   }
  ],
  "metadata": {
